--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,17 @@ body,
 
 body {
     font-family: 'Lucida Sans', sans-serif;
-    display: grid;
-    place-content: center;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
     height: 100vh;
     background-color: rgb(0, 0, 69);
     color: white;
+}
+
+canvas {
+    min-height: 200px;
+    flex-grow: 1;
 }
 
 footer {
